# fastapi-microblog

./: README.md  config.py  microblog.db  pyproject.toml
app/: __init__.py  middlewares.py  models.py  routes.py  schemas.py
core/: db.py  utils.py
migrations/: env.py
migrations/versions/: 14d2644cd952_add_relationship_user_post.py  ab404daca301_add_about_me.py  ac249b7bb22b_add_post_table.py  e0349d26a34f_first_migration.py
